// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider applies custom styles: with custom styles 1`] = `
<View
  style={
    {
      "width": 100,
    }
  }
  testID="range-slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "backgroundColor": "#E7E7E7",
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(0,122,255)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDDDDD",
        "borderRadius": 30,
        "borderWidth": 1,
        "elevation": 3,
        "height": 30,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1,
        "width": 30,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={
      [
        70,
        210,
      ]
    }
  />
</View>
`;

exports[`RangeSlider renders 1`] = `
<View
  style={{}}
  testID="range-slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "backgroundColor": "#E7E7E7",
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(0,122,255)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDDDDD",
        "borderRadius": 30,
        "borderWidth": 1,
        "elevation": 3,
        "height": 30,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1,
        "width": 30,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={
      [
        70,
        210,
      ]
    }
  />
</View>
`;
